2020-05-23  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add 'last commit' badge

2019-06-29  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (install): Use r-cran-tinytest from PPA

2019-06-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (SystemRequirements, Description): State g++ requires
	4.9.3 or newer; remove 'modern' before C++11 as it is standard now

2019-06-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.6

	* README.md (tinytest): Mention post-install testing

2019-06-24  Václav Hausenblas  <vencahaus@seznam.cz>

	* inst/tinytest/test_examples.R: Refine UTF-8 test for Windows

2019-06-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_bool_datetime.R: Skip some on tests on Solaris
        * inst/tinytest/test_dates_times.R: Idem
        * inst/tinytest/test_examples.R: Idem
        * inst/tinytest/test_misc.R: Idem

2019-06-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

        * inst/tinytest/test_misc.R: Added, based on tests/strings.R
        * inst/tinytest/test_strings.R: Added, based on tests/strings.R
	* inst/tinytest/strings.toml: Moved from tests/tables.toml
        * inst/tinytest/test_tables.R: Added, based on tests/tables.R
	* inst/tinytest/tables.toml: Moved from tests/tables.toml
	* inst/tinytest/test_examples.R: Added, based on tests/tomlExamples.R
        * inst/tinytest/toml_example-v0.4.0.toml: Moved from
	  tests/toml_example-v0.4.0.toml
        * inst/tinytest/toml_example.toml: Moved from tests/toml_example.toml
        * inst/tinytest/toml_hard_example.toml: Moved from
	  tests/toml_hard_example.toml

        * tests/*.Rout.save: Moved old test results to local/old_tests/

	* .codecov.yml (coverage): Make patch behaviour more quiet

	* ChangeLog: Add entries for PRs since last release
	* inst/NEWS: Idem

2019-06-21  Dirk Eddelbuettel  <edd@debian.org>

        * .travis.yml (install): Install tinytest
